refactor(dex-reader): 优化 DexFileReader 类的代码结构和性能
- 重新组织导入语句，使用更具体的导入以提高代码可读性
- 用静态导入替换某些常量，减少类名重复
- 优化数据类型解析方法，使用更高效的值包装类
- 重构部分代码以提高可维护性

fix(d2j-jasmin): 修复 JasminDumper 类中的数值打印问题

- 修正字符、浮点数、双精度浮点数和整数的打印方式
- 使用更高效的值包装类进行数值打印